# dynamo-release

./: ._CONTRIBUTING.md  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cell_cycle_CSPss.py  docrep.py  meta.yaml  numbers_in_dynamo_first_revision.py  pyproject.toml  pytest.ini  requirements.txt  requirements_own_v2.txt  scEU-seq_CellCycle_CSP_CSZIP.py  scEU-seq_CellCycle_ICSP.py  setup.cfg  setup.py  sinfo-requirements.txt  version.py
.github/ISSUE_TEMPLATE/: analyses-&-predictions.md  bug_report.md  docs-bug-or-enhancement.md  docs-bug-or-request.md
.github/workflows/: black.yml  flake8.yml  format-lint.yml  python-docker.yml  python-package.yml  python-plain-run-test.yml  python-publish.yml  stale.yml
conda_recipe/: meta.yaml
conda_test/: meta.yaml
docs/: conf.py  faq.md  index.md  installation.md  references.bib  requirements.txt
docs/_static/css/: custom.css
docs/api/: datasets.md  index.md  user.md
docs/introduction/: index.md  index_cellfate.md  index_geo.md  index_silico.md  index_time.md
docs/introduction/lap_tutorial/: lap_tutorial.rst
docs/source/: API.rst  Acknowledgement.rst  Citation.rst  Class.rst  Differential_geometry.rst  Get_Started.rst  Install_Dynamo.rst  Introduction.rst  Notebooks.rst  Other_notebooks.rst  Primer.rst  Reference.rst  References.rst  Release_notes.rst  Tutorial.rst  Why_dynamo.rst  conf.py  index.rst  scEU_seq_organoid_analysis_kinetic.rst  ten_minutes_to_dynamo.rst  utils.py
docs/tutorials/: index.md  index_conventional.md  index_differential_geometry.md  index_gallery.md  index_labeling.md  index_multivelo.md  index_preprocessing.md  index_vector_pre.md  shiny.md
docs/user_guide/: index.md
dynamo/: __init__.py  configuration.py  data_io.py  docrep.py  dynamo_logger.py  est.py  ext.py  get_version.py  multi.py  mv.py  pd.py  pl.py  pp.py  sample_data.py  shiny.py  sim.py  tl.py  utils.py  vf.py
dynamo/estimation/: __init__.py  deprecated.py  fit_jacobian.py
dynamo/movie/: __init__.py  fate.py  utils.py
dynamo/multivelo/: ATACseqTools.py  ChromatinVelocity.py  MultiConfiguration.py  MultiIO.py  MultiPreprocessor.py  MultiQC.py  MultiVelo.py  __init__.py  dynamical_chrom_func.py  globals.py  old_MultiVelocity.py  old_MultiomicVectorField.py  pyWNN.py  settings.py  sparse_matrix_utils.py
dynamo/pl/: __init__.py  phase.py
dynamo/plot/: __init__.py  _jacobian.py  _trends.py  animation_lines.py  cell_cycle.py  clustering.py  clustering_community.py  connectivity.py  dimension_reduction.py  dynamics.py  ezplots.py  fate.py  fate_utilities.py  heatmaps.py  least_action_path.py  markers.py  networks.py  phase.py  preprocess.py  preprocessing.py  pseudotime.py  scPotential.py  scSLAM_seq.py  scVectorField.py  scatters.py  sctransform.py  space.py  state_graph.py  streamtube.py  theme.py  time_series.py  topography.py  topology  topology.py  utilities.py  utils.py  utils_dynamics.py  utils_graph.py  vector_calculus.py  velocity.py  (+1 more)
dynamo/pp/: __init__.py
dynamo/prediction/: __init__.py  _tf_eval.py  fate.py  least_action_path.py  perturbation.py  state_graph.py  trajectory.py  trajectory_analysis.py  tscRNA_seq.py  utils.py
dynamo/preprocessing/: CnmfPreprocessor.py  PreprocessWorker.py  Preprocessor.py  QC.py  __init__.py  _deprecated.py  cell_cycle.py  deprecated.py  dynast.py  gene_selection.py  gene_selection_utils.py  normalization.py  pca.py  pp_worker_utils.py  preprocess.py  preprocess_monocle_utils.py  preprocessor_utils.py  sctransform.py  transform.py  utilities.py  utils.py
dynamo/shiny/: __init__.py  lap.py  perturbation.py  styles.css  utils.py
dynamo/simulation/: Gillespie.py  ODE.py  __init__.py  bif_os_inclusive_sim.py  evaluation.py  example_networks.py  gillespie_utils.py  simulate_anndata.py  simulation.py  utils.py
dynamo/tl/: __init__.py  dynamo_fitting.py  gillespie.py  moments.py  scPotential.py  scVectorField.py  simulation.py  velocity.py  velocyto_scvelo.py
dynamo/tools/: Ao.py  Bhattacharya.py  DDRTree.py  DDRTree_graph.py  DDRTree_py.py  Markov.py  Wang.py  __init__.py  _dynamics_deprecated.py  _enum.py  _extvelo.py  _track.py  cell_vectors.py  cell_velocities.py  clustering.py  connectivity.py  construct_velocity_tree.py  deprecated.py  dimension_reduction.py  dynamics.py  dynamics_deprecated.py  dynamo.py  dynamoLogger.py  dynamo_bk.py  dynamo_fitting.py  dynamo_logger.py  estimation_kinetic.py  estimation_kinetics.py  fate.py  gillespie.py  graph_calculus.py  graph_operators.py  growth.py  hdbscan.py  kdTree.py  markers.py  markov_chain.py  metric_velocity.py  moments.py  multiomics.py  (+32 more)
dynamo/vectorfield/: Ao.py  Bhattacharya.py  FixedPoints.py  Tang.py  VectorField.py  Wang.py  __init__.py  cell_accelerations.py  cell_vectors.py  clustering.py  debug_dynode_code.py  least_action_path.py  networks.py  rank_vf.py  scPotential.py  scVectorField.py  stochastic_process.py  topography.py  util_vector_calculus.py  utils.py  utils_vecCalc.py  vector_calculus.py  vfGraph.py  vfGraph_deprecated.py
shiny_web/: index.html
skills/dynamo-conventional-rna-velocity/: SKILL.md
skills/dynamo-differential-geometry-analysis/: SKILL.md
skills/dynamo-geneid-convert/: SKILL.md
skills/dynamo-in-silico-perturbation/: SKILL.md
skills/dynamo-lap-cell-fate-transition/: SKILL.md
skills/dynamo-lineage-appearance-analysis/: SKILL.md
skills/dynamo-one-shot-total-rna-velocity/: SKILL.md
skills/dynamo-preprocess/: SKILL.md
skills/dynamo-pseudotime-velocity/: SKILL.md
tests/: __init__.py  conftest.py  run_plain_tests.sh  test_clustering.py  test_config.py  test_data_io.py  test_estimation.py  test_graph_calculus.py  test_graph_operators.py  test_kdTree.py  test_logger.py  test_neighbors.py  test_pipeline.py  test_pl.py  test_pl_utils.py  test_prediction.py  test_preprocess.py  test_scEU_rpe1_tutorial.py  test_simulation.py  test_space.py  test_sude.py  test_tl.py  test_tl_utils.py  test_tools.py  test_utils.py  test_vf.py  tests.py  utils.py
(+73 files in other folders)
