[build-system]
requires = ['flit']
build-backend = 'flit.buildapi'

[tool.flit.metadata]
module = 'dynamo'
author = 'Xiaojie Qiu, Yan Zhang, Ke Ni'
author-email = 'xqiu.sc@gmail.com'
home-page = 'https://github.com/aristoteleo/dynamo-release'
license = 'BSD'
description-file = 'README.md'
requires-python = '>=3.6'
requires = ['numpy>=1.18.1',
            'pandas>=0.25.1',
            'scipy>=1.0',
            'scikit-learn>=0.19.1',
            'cvxopt>=1.2.3',
            'anndata==0.7.5',
            'loompy>=3.0.5',
            'matplotlib>=3.1.0',
            'trimap>=1.0.11',
            'setuptools',
            'numdifftools>=0.9.39',
            'umap-learn>=0.5.1',
            'hdbscan>=0.8.26',
            'PATSY>=0.5.1',
            'statsmodels>=0.9.0',
            'numba>=0.46.0',
            'seaborn>=0.9.0',
            'colorcet>=2.0.1',
            'networkx',
            'tqdm',
            'python-igraph>=0.7.1',
            'pynndescent>=0.5.2',
            'joblib',
            'setuptools']
requires-extra = { doc = ['docutils'], test = ['pytest', 'sympy>=1.4'], spatial = ['pysal>2.0.0'], dimension_reduction = ['fitsne>=1.0.1'], bigdata_visualization = ["datashader>=0.9.0", "bokeh>=1.4.0", "holoviews>=1.9.2"] }
keywords = 'dynamo scslam-seq scrna-seq velocity rna protein vector-field potential-landscape'
classifiers = [
	'License :: OSI Approved :: BSD License',
	'Development Status :: 5 - Production/Stable',
	'Intended Audience :: Science/Research',
	'Natural Language :: English',
	'Programming Language :: Python :: 3.6',
	'Programming Language :: Python :: 3.7',
	'Programming Language :: Python :: 3.8'
]

[tool.flit.sdist]
exclude = [
    'dynamo/tests',
    'setup.py',
]

[tool.coverage.run]
source = ['dynamo']
omit = ['*/tests/*']


[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
